Agregando campos a usuario admin

--- a/app/views/eventos/new.html.erb
+++ b/app/views/eventos/new.html.erb
@@ -23,7 +23,7 @@
     <h1>Nuevo Evento</h1>
 
       <div class="row">
-        Selecciona el Estado donde será el evento
+        Como
       </div>
 
       <div class="row">
