--- a/app/assets/stylesheets/principal/custom.css.scss
+++ b/app/assets/stylesheets/principal/custom.css.scss
@@ -174,10 +174,18 @@ a.carousel-control:hover {
 }
 
 
+
+
 .site-header {
-    background-image: url("https://s3.amazonaws.com/imagenes.notelimites/bg.jpg");
-    background-repeat: no-repeat;
-    background-color: blac;
+  background: #7c58a0; /* Old browsers */
+  background: -moz-radial-gradient(center, ellipse cover,  #7c58a0 0%, #593e73 100%); /* FF3.6+ */
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#7c58a0), color-stop(100%,#593e73)); /* Chrome,Safari4+ */
+  background: -webkit-radial-gradient(center, ellipse cover,  #7c58a0 0%,#593e73 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-radial-gradient(center, ellipse cover,  #7c58a0 0%,#593e73 100%); /* Opera 12+ */
+  background: -ms-radial-gradient(center, ellipse cover,  #7c58a0 0%,#593e73 100%); /* IE10+ */
+  background: radial-gradient(ellipse at center,  #7c58a0 0%,#593e73 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7c58a0', endColorstr='#593e73',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
     -webkit-background-size:cover;
     -moz-background-size:cover;
     background-size:cover;
