--- a/app/views/layouts/actividades.html.erb
+++ b/app/views/layouts/actividades.html.erb
@@ -1,40 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NoTeLimites</title>
-  <%= favicon_link_tag 'favicon.ico' %>
-  <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
-  <script type="text/javascript"  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFAg4UahxEExMg5KMJmd05M4Kq0rBcbEI&sensor=false">
-  </script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true&libraries=places"></script>
-  <title><%= full_title(yield(:title)) %></title>
-      <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-  <%= render 'layouts/shim' %>
-  <meta charset="utf-8">
-  <!-- Always force latest IE rendering engine or request Chrome Frame -->
-  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+ <%=	 render "layouts/header2" %>
 </head>
 
 <body>
-
-<script type="text/javascript">
-
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-30392244-1']);
-    _gaq.push(['_setDomainName', 'notelimites.com']);
-    _gaq.push(['_setAllowLinker', true]);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-
-</script>
-
+<%=	 render "layouts/googleanalytics" %>
 <%=	 render "layouts/bodyapp" %>
 
 </body>
