--- a/app/views/layouts/eventos.html.erb
+++ b/app/views/layouts/eventos.html.erb
@@ -1,23 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NoTeLimites</title>
-  <%= favicon_link_tag 'favicon.ico' %>
-  <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
-  <script type="text/javascript"  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFAg4UahxEExMg5KMJmd05M4Kq0rBcbEI&sensor=false">
-  </script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true&libraries=places"></script>
-  <title><%= full_title(yield(:title)) %></title>
-      <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-  <%= render 'layouts/shim' %>
-  <meta charset="utf-8">
-  <!-- Always force latest IE rendering engine or request Chrome Frame -->
-  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+  <%=	 render "layouts/header2" %>
 </head>
 
 <body>
+<%=	 render "layouts/googleanalytics" %>
 <%=	 render "layouts/bodyapp" %>
 
 </body>
