--- a/app/views/notelimites/home.html.erb
+++ b/app/views/notelimites/home.html.erb
@@ -1,11 +1,50 @@
 
 
+
 <% if signed_in? %>
+
 
 
 
 <% else %>
 
+
+
+
+    <header id="header" class="site-header">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+
+          </div><!-- /span12 -->
+        </div><!-- /row-fluid -->
+
+
+
+        <div class="row">
+          <div class="col-md-12">
+            <% [:notice, :error, :alert].each do |level| %>
+                <% unless flash[level].blank? %>
+                    <div data-alert="alert" class="alert-message <%= flash_class(level) %> fade in">
+                      <a class="close" href="#">×</a>
+                      <%= content_tag :p, flash[level] %>
+                    </div>
+                <% end %>
+            <% end %>
+
+                <div class="header-description">
+
+                      <h2 style="font-size: 58px">Bienvenido a Limbo</h2>
+
+                      <div class="header-btn"><%= link_to "Comienza aquí", new_user_registration_path %></div>
+                </div><!-- /header-description -->
+
+
+
+          </div><!-- /span12 -->
+        </div><!-- /row-fluid -->
+      </div><!-- /container -->
+    </header>
 
 
 
