--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 <% provide(:title, "Ingresa") %>
 
 <header id="header" class="site-header">
-  <div class="container" style="height: 1000px">
+  <div class="container">
     <div class="row">
       <div class="col-md-12">
             <div class="text-center" >
@@ -37,7 +37,7 @@
                                   <div><%= f.submit "Regístrate", class: "btn header-btn-form" %></div>
                               <% end %>
                           <div  style="color: #ffffff; text-align: left;">
-                            
+
                             <br>
                             <br>
                             <br>
