--- a/app/assets/stylesheets/simple-sidebar.css
+++ b/app/assets/stylesheets/simple-sidebar.css
@@ -4,12 +4,12 @@
 }
 
 #sidebar-wrapper {
-  margin-top: 5px;
+  margin-top: -3px;
   padding-top: 20px;
   margin-left: -250px;
   left: 250px;
   width: 200px;
-  background: #000;
+  background: #1e1e1e;
   position: fixed;
   height: 100%;
   overflow-y: auto;
