--- a/app/assets/stylesheets/simple-sidebar.css
+++ b/app/assets/stylesheets/simple-sidebar.css
@@ -4,13 +4,14 @@
 }
 
 #sidebar-wrapper {
-  margin-top: -3px;
+  margin-top: -4px;
   padding-top: 20px;
   margin-left: -250px;
   left: 250px;
   width: 200px;
-  background: #1e1e1e;
-  position: fixed;
+  background-image: url("fondo-gris-01.png");
+  background-color: #808080;
+    position: fixed;
   height: 100%;
   overflow-y: auto;
   z-index: 1000;
@@ -31,7 +32,8 @@
 }
 
 .sidebar-nav li {
-  line-height: 40px;
+   margin-top: 20px;
+   line-height: 40px;
   text-indent: 20px;
 }
 
