--- a/app/views/micrositios/new.html.erb
+++ b/app/views/micrositios/new.html.erb
@@ -1,5 +1,30 @@
 <% if signed_in?   %>
 
+<div class="col-md-10">
+
+    <%= form_for(@micrositio, :html => { :multipart => true }) do |f| %>
+
+        <%= render 'shared/error_messages', object: f.object %>
+
+        <%= f.label :estado_id %><br />
+        <%= f.collection_select :estado_id, Estado.order(:estado), :id, :estado, id: "estadoselect"  %>
+
+
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+
+        <%= f.label :descripcion %>
+        <%= f.text_area :descripcion %>
+
+        <%= f.label :imagen %>
+        <%= f.file_field :photo %>
+
+
+        <%= f.submit "Sube tu evento", class: "btn btn-large btn-primary" %>
+
+    <% end %>
+
+</div>
 
 <%	 else %>
     <%=	 render "shared/ingresa" %>
