--- a/app/views/shared/_ingresa.html.erb
+++ b/app/views/shared/_ingresa.html.erb
@@ -5,12 +5,11 @@
     <%=	link_to(new_user_registration_path) do   %>
         <button class="row ingresaya">
 
-          <h3>Te invitamos a que te registres GRATIS para que puedas ver todos los lugares, eventos y muchas otras cosas que
-                NoTeLimites tiene para ti.</h3>
+          <h3>Te invitamos a que te registres GRATIS para que puedas reservar en todos los lugares y puedas  eventos.</h3>
 
 
           <hr>
-          <%=	image_tag("LogoNTL.png") %>
+         <h1>	LIMBO </h1>
 
         </button>
     <%	 end %>
