--- a/app/assets/stylesheets/micrositios.css.scss
+++ b/app/assets/stylesheets/micrositios.css.scss
@@ -35,11 +35,10 @@ table {
 
 //CONTENDEDOR TITUILO
 
-#micrositiotitulocontendedor{
-  background-color: #434343;
-  height: 120px;
+.micrositiotitulocontendedor{
+  background-color: #593e73;
   padding-bottom: 20px;
-  padding-left: 40px;
+  padding-left: 10px;
   opacity: .8;
   border-radius: 5px;
   box-shadow: 10px 10px 5px #888888;
