--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -9,18 +9,14 @@
 
   <%	 if current_user.admin? or current_user.editor? %>
 
-      <ul class="sidebar-nav">
-        <li class="hidden-md hidden-lg" ><i><%= link_to image_tag("social.png", class: "icono-pr"), categorias_social_path %></i></li>
-        <li class="hidden-md hidden-lg" ><i><%= link_to image_tag("ecoturismo.png", class: "icono-pr"), categorias_ecoturismo_path%></i>  </li>
-        <li class="hidden-md hidden-lg" ><i><%= link_to image_tag("turismo.png", class: "icono-pr"), categorias_turismo_path%></i>   </li>
-        <li class="hidden-md hidden-lg" ><i><%= link_to image_tag("alternativo.png", class: "icono-pr"), categorias_alternativo_path%></i>   </li>
+      <ul class="sidebar-nav" >
+
         <li class="active"><i ><%= link_to " Descubre", root_path %></i></li>
         <li><i > <%= link_to "Explora", estados_path %></i></li>
         <li><i > <%= link_to "Usuarios", users_path %></i></li>
 
 
-         <li style="margin-top: 100px"><button style="padding-left: 20px; padding-right: 20px"><i > <%= link_to "Agregar evento", new_evento_path %></i></button></li>
-         <li style="margin-top: 10px"><button style="padding-left: 20px; padding-right: 30px"><i > <%= link_to "Agregar lugar", new_micrositio_path %></i></button></li>
+         <li style="margin-top: 10px"><button style="padding-left: 20px; padding-right: 30px"><i > <%= link_to "Agregar Antro", new_micrositio_path %></i></button></li>
       </ul>
 
 
@@ -28,14 +24,18 @@
 
 <%	 else %>
 
-      <ul class="sidebar-nav">
-        <li class="hidden-md hidden-lg" ><i><%= link_to image_tag("social.png", class: "icono-pr"), categorias_social_path %></i></li>
-        <li class="hidden-md hidden-lg" ><i><%= link_to image_tag("ecoturismo.png", class: "icono-pr"), categorias_ecoturismo_path%></i>  </li>
-        <li class="hidden-md hidden-lg" ><i><%= link_to image_tag("turismo.png", class: "icono-pr"), categorias_turismo_path%></i>   </li>
-        <li class="hidden-md hidden-lg" ><i><%= link_to image_tag("alternativo.png", class: "icono-pr"), categorias_alternativo_path%></i>   </li>
-        <li class="active"><i ><%= link_to " Descubre", root_path %></i></li>
-        <li><i > <%= link_to "Explora", estados_path %></i></li>
-        <li><i > <%= link_to "Usuarios", users_path %></i></li>
+      <ul class="sidebar-nav" >
+        <li class="active"  ><i ><%= link_to " Newsfeed", root_path %></i></li>
+        <hr style="margin: 8px; margin-bottom: -10px">
+        <li  style="margin-bottom: -20px !important;"><i > <%= link_to "Profile", current_user %></i></li>
+        <li ><i > <%= link_to "Friends", users_path %></i></li>
+        <hr style="margin: 8px">
+        <h3  style="margin-bottom: -10px !important; margin-left: 20px"> Places</h3>
+        <li  style="margin-bottom: -20px !important;"><i > <%= link_to "Nightclubs", actividades_nightclubs_path %></i></li>
+        <li  style="margin-bottom: -20px !important;"><i > <%= link_to "Bars", micrositios_path %></i></li>
+        <li  style="margin-bottom: -20px !important;"><i > <%= link_to "Restaurants", micrositios_path %></i></li>
+
+
       </ul>
 
 
