--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -1,33 +1,34 @@
 <%	 if signed_in? %>
-<div class="container">
 
-  <div class="row">
-    <div class="col-md-12">
-      <div id="micrositiotitulocontendedor">
-        <div class="row">
-          <div class="col-md-5">
+<div class="col-md-12 col-sm-12 col-xs-12">
+
+  <div class="row micrositiotitulocontendedor">
+
+
+    <div class="col-md-4 col-sm-6 col-xs-6">
             <h1 style="color: #ffffff"><%=	@actividad.actividad %> </h1>
             <h4 style="color: #090909"> <%=@actividad.descripcion %> </h4>
-          </div>
-          <div class="col-md-2" style="padding-top: 40px">
+    </div>
+    <div class="col-md-8 col-sm-6 col-xs-6">
+
+          <div class="col-md-4 col-sm-6 col-xs-10" style="padding-top: 40px">
             <%= render 'follow_form' %>
           </div>
-          <div class="col-md-2 " style="padding-top: 40px">
+          <div class="col-md-3 col-sm-6 hidden-xs" style="padding-top: 40px">
             <div class="fb-like" data-href="<%=request.original_url%>" data-height="The pixel height of the plugin" data-colorscheme="light" data-layout="box_count" data-action="recommend" data-show-faces="true" data-send="false"></div>
           </div>
-          <div class="col-md-2 " style="padding-top: 40px">
+          <div class="col-md-3 col-sm-6 hidden-xs  " style="padding-top: 40px">
             <a href="https://twitter.com/share" class="twitter-share-button" data-via="NTLmx" data-lang="es" data-size="large">Twittear</a>
           </div>
-          <div class="col-md-1 " style="padding-top: 40px">
+          <div class="col-md-2 col-sm-6 hidden-xs" style="padding-top: 40px">
             <div class="g-plusone" data-annotation="inline" data-width="120"></div>
           </div>
-        </div>
-      </div>
     </div>
   </div>
 
 
 </div>
+
 
 <% else %>
 
