--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -28,11 +28,11 @@
                 <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to "Perfil", current_user %></li>
-                <li><%= link_to "Configuración", edit_user_registration_path(current_user) %></li>
+                <li><%= link_to "Profile", current_user %></li>
+                <li><%= link_to "Configuration", edit_user_registration_path(current_user) %></li>
                 <li class="divider"></li>
                 <li>
-                  <%= link_to "Salir",  destroy_user_session_path, method: "delete" %>
+                  <%= link_to "Log out",  destroy_user_session_path, method: "delete" %>
                 </li>
               </ul>
             </li>
