Arreglando subir antro

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -32,8 +32,8 @@
         <hr style="margin: 8px">
         <h3  style="margin-bottom: -10px !important; margin-left: 20px"> Places</h3>
         <li  style="margin-bottom: -20px !important;"><i > <%= link_to "Nightclubs", actividades_nightclubs_path %></i></li>
-        <li  style="margin-bottom: -20px !important;"><i > <%= link_to "Bars", micrositios_path %></i></li>
-        <li  style="margin-bottom: -20px !important;"><i > <%= link_to "Restaurants", micrositios_path %></i></li>
+        <li  style="margin-bottom: -20px !important;"><i > <%= link_to "Bars", actividades_bars_path %></i></li>
+        <li  style="margin-bottom: -20px !important;"><i > <%= link_to "Restaurants", actividades_restaurants_path %></i></li>
 
 
       </ul>
