--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -5,22 +5,24 @@
   <div class="row micrositiotitulocontendedor">
 
 
-    <div class="col-md-4 col-sm-6 col-xs-6">
-            <h1 style="color: #ffffff"><%=	@actividad.actividad %> </h1>
-            <h4 style="color: #090909"> <%=@actividad.descripcion %> </h4>
-    </div>
-    <div class="col-md-8 col-sm-6 col-xs-6">
+    <div class="col-md-4 col-sm-6 hidden-xs">
 
-          <div class="col-md-4 col-sm-6 col-xs-10" style="padding-top: 40px">
+      <h1 style="color: #ffffff"><%=	@actividad.actividad %> </h1>
+    </div>
+    <div class="visible-xs col-xs-4">
+      <h1 style="color: #ffffff; font-size: 16px"><%=	@actividad.actividad %> </h1>
+    </div>
+    <div class="col-md-8 col-sm-6 col-xs-8" style="padding-top: 15px">
+          <div class="col-md-4 col-sm-6 col-xs-10 col-xs-offset-1" >
             <%= render 'follow_form' %>
           </div>
-          <div class="col-md-3 col-sm-6 hidden-xs" style="padding-top: 40px">
+          <div class="col-md-3 col-sm-6 hidden-xs">
             <div class="fb-like" data-href="<%=request.original_url%>" data-height="The pixel height of the plugin" data-colorscheme="light" data-layout="box_count" data-action="recommend" data-show-faces="true" data-send="false"></div>
           </div>
-          <div class="col-md-3 col-sm-6 hidden-xs  " style="padding-top: 40px">
+          <div class="col-md-3 col-sm-6 hidden-xs  " >
             <a href="https://twitter.com/share" class="twitter-share-button" data-via="NTLmx" data-lang="es" data-size="large">Twittear</a>
           </div>
-          <div class="col-md-2 col-sm-6 hidden-xs" style="padding-top: 40px">
+          <div class="col-md-2 col-sm-6 hidden-xs">
             <div class="g-plusone" data-annotation="inline" data-width="120"></div>
           </div>
     </div>
@@ -28,6 +30,13 @@
 
 
 </div>
+
+<ul>
+  <%	 @actividad.micrositios.each do |x| %>
+      <li> <%=	 x.name %> </li>
+  <%	 end %>
+
+</ul>
 
 
 <% else %>
