--- a/app/views/actividades/new.html.erb
+++ b/app/views/actividades/new.html.erb
@@ -1,5 +1,19 @@
 <h1>New actividad</h1>
 
-<%= render 'form' %>
+
+<%= form_for(@actividad, :html => { :multipart => true }) do |f| %>
+
+    <%= render 'shared/error_messages', object: f.object %>
+
+
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+
+
+
+
+    <%= f.submit "Sube tu actividad", class: "btn btn-large btn-primary" %>
+
+<% end %>
 
 <%= link_to 'Back', actividades_path %>
