--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -7,10 +7,10 @@
 
     <div class="col-md-4 col-sm-6 hidden-xs">
 
-      <h1 style="color: #ffffff"><%=	@actividad.actividad %> </h1>
+      <h1 style="color: #ffffff"><%=	@actividad.name %> </h1>
     </div>
     <div class="visible-xs col-xs-4">
-      <h1 style="color: #ffffff; font-size: 16px"><%=	@actividad.actividad %> </h1>
+      <h1 style="color: #ffffff; font-size: 16px"><%=	@actividad.name %> </h1>
     </div>
     <div class="col-md-8 col-sm-6 col-xs-8" style="padding-top: 15px">
           <div class="col-md-4 col-sm-6 col-xs-10 col-xs-offset-1" >
@@ -32,7 +32,7 @@
 </div>
 
 <ul>
-  <%	 @actividad.micrositios.each do |x| %>
+  <%	 @actividades.micrositio.each do |x| %>
       <li> <%=	 x.name %> </li>
   <%	 end %>
 
