--- a/app/views/layouts/_sidebarlogout.html.erb
+++ b/app/views/layouts/_sidebarlogout.html.erb
@@ -4,13 +4,18 @@
 
 <!-- Sidebar -->
 <div id="sidebar-wrapper">
-  <ul class="sidebar-nav">
-    <li class="hidden-md hidden-lg" ><i><%= link_to image_tag("social.png", class: "icono-pr"), categorias_social_path %></i></li>
-    <li class="hidden-md hidden-lg" ><i><%= link_to image_tag("ecoturismo.png", class: "icono-pr"), categorias_ecoturismo_path%></i>  </li>
-    <li class="hidden-md hidden-lg" ><i><%= link_to image_tag("turismo.png", class: "icono-pr"), categorias_turismo_path%></i>   </li>
-    <li class="hidden-md hidden-lg" ><i><%= link_to image_tag("alternativo.png", class: "icono-pr"), categorias_alternativo_path%></i>   </li>
-    <li class="active"><i ><%= link_to " Descubre", root_path %></i></li>
-    <li><i > <%= link_to "Explora", root_path %></i></li>
-    <li><i > <%= link_to "Usuarios", root_path %></i></li>
+
+  <ul class="sidebar-nav" >
+    <li class="active"  ><i ><%= link_to " Newsfeed", root_path %></i></li>
+    <hr style="margin: 8px; margin-bottom: -10px">
+    <li  style="margin-bottom: -20px !important;"><i > <%= link_to "Profile", current_user %></i></li>
+    <li ><i > <%= link_to "Friends", users_path %></i></li>
+    <hr style="margin: 8px">
+    <h3  style="margin-bottom: -10px !important; margin-left: 20px"> Places</h3>
+    <li  style="margin-bottom: -20px !important;"><i > <%= link_to "Nightclubs", actividades_nightclubs_path %></i></li>
+    <li  style="margin-bottom: -20px !important;"><i > <%= link_to "Bars", actividades_bars_path %></i></li>
+    <li  style="margin-bottom: -20px !important;"><i > <%= link_to "Restaurants", actividades_restaurants_path %></i></li>
+
+
   </ul>
 </div>
