Mejorando la pagina

--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -32,7 +32,7 @@
 </div>
 
 <ul>
-  <%	 @actividades.micrositio.each do |x| %>
+  <%	 @actividad.micrositios.each do |x| %>
       <li> <%=	 x.name %> </li>
   <%	 end %>
 
