--- a/app/views/micrositios/new.html.erb
+++ b/app/views/micrositios/new.html.erb
@@ -14,17 +14,18 @@
     <%= form_for(@micrositio, :html => { :multipart => true }) do |f| %>
 
         <%= render 'shared/error_messages', object: f.object %>
+
       <div class="col-md-12">  <p>Ubicación del lugar</p></div>
       <div id="map-canvas" class="thumbnail" style="height: 200px"></div>
       <div id="latlong">
-        <div> <%= f.hidden_field :lat, class: 'input-sm', id: 'latbox' %></div>
-        <div> <%= f.hidden_field :lng, class: 'input-sm', id: 'lngbox' %></div>
+        <div> <%= f.text_field :lat, class: 'input-sm', id: 'latbox' %></div>
+        <div> <%= f.text_field :lng, class: 'input-sm', id: 'lngbox' %></div>
       </div>
+
         <%= f.label :actividad_id %>
-      <%= f.collection_select :actividad_id, Actividad.order(:name), :id, :name, id: "actividadselect"  %>
+        <%= f.collection_select :actividad_id, Actividad.all, :id, :name  %>
 
-
-      <%= f.label :name %>
+        <%= f.label :name %>
         <%= f.text_field :name %>
 
         <%= f.label :descripcion %>
