--- a/app/assets/stylesheets/principal/custom.css.scss
+++ b/app/assets/stylesheets/principal/custom.css.scss
@@ -659,16 +659,29 @@ footer a:link {color: #fbfbfb !important;}
                         responsive fix
 **************************************************************/
 /* Large desktop */
-@media (min-width: 1200px) {
+@media (min-width: 1400px){
+  .site-header {
+    min-height: 1500px;
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1400px) {
     .site-header {
-      min-height: 1200px;
+      min-height: 800px;
     }
     }
+
+/* Large desktop */
+@media (min-width: 980px) and (max-width: 1199px) {
+  .site-header {
+    min-height: 630px;
+  }
+  }
 
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
     .site-header {
-      min-height: 640px;
+      min-height: 440px;
     }
 
     .header-description h2 {
@@ -690,7 +703,7 @@ footer a:link {color: #fbfbfb !important;}
         padding: 0;
     }
   .site-header {
-    min-height: 1000px;
+    min-height: 500px;
   }
     .container {
         padding-left: 20px;
