--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
             </div>
             <section>
               <div class="text-center  ">
-                  <i class="icon-facebook-sign"></i>  <%= link_to "Please Login with Facebook", user_omniauth_authorize_path(:facebook), class: " btn btn-lg btn-primary" %>
+                  <i class="icon-facebook-sign"></i>  <%= link_to "Login with Facebook", user_omniauth_authorize_path(:facebook), class: " btn btn-lg btn-primary" %>
               </div>
               <div class="row text-center" >
 
@@ -29,12 +29,12 @@
                   <h2 class="text-center" style="color: #ffffff; font-weight: 100" >Or create an account </h2>
                       <div class="col-md-10 col-md-offset-1 " >
                               <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-                                  <div> <%= f.text_field :name, :autofocus => true, :placeholder => "Nombre", class: 'input-sm' %></div>
+                                  <div> <%= f.text_field :name, :autofocus => true, :placeholder => "Name", class: 'input-sm' %></div>
                                   <div><%= f.email_field :email, :autofocus => true, :placeholder => "Email", class: 'input-sm'%></div>
                                   <div> <%= f.text_field :username, :placeholder => "Username", class: 'input-sm' %></div>
                                   <div><%= f.password_field :password, :placeholder => "Password", class: 'input-sm'%></div>
                                   <div> <%= f.password_field :password_confirmation, :placeholder => "Password confirmation", class: 'input-sm' %></div>
-                                  <div><%= f.submit "Regístrate", class: "btn header-btn-form" %></div>
+                                  <div><%= f.submit "Sign up", class: "btn header-btn-form" %></div>
                               <% end %>
                           <div  style="color: #ffffff; text-align: left;">
 
