--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -1,10 +1,35 @@
+<script>
+
+    function initialize() {
+        var myLatlng = new google.maps.LatLng(23.634501,-102.55278399999997);
+        var mapOptions = {
+            zoom: 4,
+            center: myLatlng
+        }
+        var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+
+        // Place a draggable marker on the map
+        var marker = new google.maps.Marker({
+            position: myLatlng,
+            map: map,
+            draggable:true,
+            title:"Your location!"
+        });
+        google.maps.event.addListener(marker, 'dragend', function (event) {
+            document.getElementById("latbox").value = this.getPosition().lat();
+            document.getElementById("lngbox").value = this.getPosition().lng();
+        });
+    }
+    google.maps.event.addDomListener(window, 'load', initialize);
+
+</script>
+
+
 <%	 if signed_in? %>
 
 <div class="col-md-12 col-sm-12 col-xs-12">
 
   <div class="row micrositiotitulocontendedor">
-
-
     <div class="col-md-4 col-sm-6 hidden-xs">
 
       <h1 style="color: #ffffff"><%=	@actividad.name %> </h1>
@@ -27,9 +52,90 @@
           </div>
     </div>
   </div>
-
-
 </div>
+
+
+
+
+<%	 if current_user.lat.nil? %>
+    <div class="row">
+      <p>Update your location</p>
+    </div>
+    <%= form_for(current_user, :html => { :multipart => true }) do |f| %>
+        <div id="map-canvas" class="thumbnail" style="height:200px"></div>
+        <div id="latlong">
+          <div> <%= f.hidden_field :lat, class: 'input-sm', id: 'latbox' %></div>
+          <div> <%= f.hidden_field :lng, class: 'input-sm', id: 'lngbox' %></div>
+        </div>
+        <div class="col-md-4 col-md-offset-4" style="margin-bottom: 10px"><%= f.submit "Update", class: 'btn btn-primary' %></div>
+    <% end %>
+<%	 else %>
+        <div class="row">
+          <p><%=	 link_to "Do you want to change your location?", edit_user_registration_path(current_user) %> </p>
+        </div>
+
+
+
+        <%	 place = ActiveSupport::JSON.decode(open("https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=#{current_user.lat},#{current_user.lng}&radius=100000&types=#{@actividad.name}&sensor=false&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs").read) %>
+
+
+
+
+              <ul class="col-md-10 col-lg-8 col-sm-10 col-xs-12" style="padding: 0px">
+                <% place['results'].each do |result| %>
+                    <li class="thumbnail" style="overflow: hidden">
+
+
+                      <br/>
+                      <%=   result['photos']	%>
+
+
+                        <div class="caption">
+                          <h3><%= link_to result['name'], micrositio_path %> </h3>
+                          <div class="row">
+                            <div class="col-md-3">
+
+                            </div>
+                            <div class="col-md-12">
+                              <p style="height: 100px; overflow: hidden">
+                                <% result['types'].each do |types| %>
+
+                                       <%= types%>
+                                    <br/>
+
+                                <% end  %>
+                              </p>
+                            </div>
+                          </div>
+
+                        </div>
+                    </li>
+                <% end  %>
+              </ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<%	 end %>
+
+
+
 
 <ul>
   <%	 @actividad.micrositios.each do |x| %>
@@ -37,6 +143,9 @@
   <%	 end %>
 
 </ul>
+
+
+
 
 
 <% else %>
