--- a/app/views/micrositios/show.html.erb
+++ b/app/views/micrositios/show.html.erb
@@ -1,16 +1,24 @@
 
 
-<div class="col-md-12" style="background-color: #b5b0db">
-  <div class="row" >
-      <div class="col-md-6 col-sm-4 col-xs-3" >
-        <%= image_tag @micrositio.photo.url(:big), class: "img-responsive", alt: "responsive image", height: 250 %>
-      </div>
-      <div class="col-md-6  col-sm-8 col-xs-9">
-        <div class="row">
-          <div class="col-md-offset-3">
-             <h1>   <%=	 @micrositio.name %></h1>
-          </div>
-        </div>
-      </div>
+<%	place = ActiveSupport::JSON.decode(open("https://maps.googleapis.com/maps/api/place/details/json?reference=#{@micrositio.reference}&sensor=true&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs").read) %>
+
+
+<div class="col-md-12">
+  <div class="col-md-6 col-xs-12">
+    <div class="img-responsive">
+      <%	 if place['result']['photos'].nil?  %>
+      <%	else  %>
+      <%= image_tag("https://maps.googleapis.com/maps/api/place/photo?maxwidth=500&photoreference=#{place['result']['photos'][0]['photo_reference']}&sensor=true&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs")  %>
+      <%	end  %>
+    </div>
+  </div>
+  <div class="col-md-6 col-xs-12">
+       <h1> <%= place['result']['name']	  %></h1>
   </div>
 </div>
+
+
+
+
+
+
